--- a/Desc_page_template.html
+++ b/Desc_page_template.html
@@ -4,11 +4,11 @@
 
 <head>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Tangerine">
+    <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="style_desc_template.css">
 	<!--below imports jquery library-->
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-	<!--below imports the jquery script for the navbuttons, doesnt work currently-->
+	<!--below imports the jquery script for the navbuttons-->
 	<script type = 'text/javascript' src = 'jquery_desc_page.js'></script>
 </head>
 
@@ -22,11 +22,13 @@
 		<div class = 'navbar'>
 			<div class = 'nav_container'>
 			
-			<a href='#'><div id = nav_button><p id='navtext'>History</p></div></a>
+			<a href='#'><div id = nav_button><p id='navtext'>About</p></div></a>
 			
 			<a href='#'><div id = nav_button><p id='navtext'>Music</p></div></a>
 			
-			<a href='#'><div id = nav_button><p id='navtext'>Memes</p></div></a>
+			<a href='#'><div id = nav_button><p id='navtext'>Links</p></div></a>
+			
+			<a href='#'><div id = nav_button><p id='navtext'>Contact</p></div></a>
 			
 			</div>
 		</div>
