--- a/Desc_page_template.html
+++ b/Desc_page_template.html
@@ -15,7 +15,7 @@
 <body>
 
 	<div class = 'heading'>
-		<p>Arkwelder Memes Co.</p>
+		<p>Arkwelder</p>
 	</div>
 
 	<div class = 'navigation'>
@@ -38,7 +38,7 @@
 	<br/>
 	
 	<div class = 'description'>
-	<p>Here lies a description of ArkWelder, a song writer of jazzy, meme-inspiring tunes.</p>
+	<p>Here lies a description of ArkWelder, a song writer of jazz.</p>
 	<p>sample text sample text sample text sample text sample text sample text
 	sample text sample text sample text sample text sample text sample text 
 	sample text sample text sample text sample text sample text sample text 
@@ -47,7 +47,9 @@
 	<p>sample text sample text sample text sample text sample text sample text 
 	sample text sample text sample text sample text sample text sample text 
 	sample text sample text sample text sample text sample text sample text 
-	sample text sample text sample text sample text sample text sample text </p>
+	sample text sample text sample text sample text sample text sample text 
+	<br/> <br/> 
+	sample text sample text sample text sample text sample text sample text sample text</p>
 	</div>
 </body>
 
